Changes to services

--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
    
     <!--  -->
      <footer class="row py-3">
-    <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-left text-center">
+    <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-left text-start">
       <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
       <h6 class="mobile footer-heading2 pt-2">We come to you!</h6>
       <div class="contact-info mt-3">
@@ -1029,7 +1029,7 @@
     </div>
 
     <!-- Cities -->
-<div class="col-12 col-lg-6 text-center text-lg-start">
+<div class="col-12 col-lg-6 text-sm-center text-lg-center">
   <h5 class="fs-5 mt-3 mt-lg-0 mb-3 d-flex justify-content-center ">We Serve</h5>
   <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3 justify-content-center">
     <div class="col"><a href="#" class="nav-link text-uppercase p-0">Charlotte</a></div>
