--- a/services.html
+++ b/services.html
@@ -442,7 +442,7 @@
                 >
                   <div class="py-5 plan-post text-center">
                    <p class="header-top">Exterior</p>
-                    <h2 class="display-5">$160+</h2>
+                    <h2 class="display-5">$180+</h2>
                     <div class="price-option mt-3">
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
@@ -473,7 +473,7 @@
                 >
                   <div class="py-5 plan-post text-center">
                     <p class="header-top">Interior</p>
-                    <h2 class="display-5">$160+</h2>
+                    <h2 class="display-5">$180+</h2>
                     <div class="price-option mt-3">
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo & Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -503,7 +503,7 @@
                 >
                   <div class="py-5 plan-post text-center">
                     <p class="header-top">Express</p>
-                    <h2 class="display-5">$125+</h2>
+                    <h2 class="display-5">$150+</h2>
                     <div class="price-option mt-3">
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Basic Wax Coating*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Wheel Surface and Tire Wash</p>
@@ -579,7 +579,7 @@
                 >
                   <div class="py-5 plan-post text-center">
                     <p class="header-top">Exterior</p>
-                    <h2 class="display-5">$160+</h2>
+                    <h2 class="display-5">$200+</h2>
                     <div class="price-option mt-3">
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
@@ -609,7 +609,7 @@
                 >
                   <div class="py-5 plan-post text-center">
                      <p class="header-top">Interior</p>
-                    <h2 class="display-5">$160+</h2>
+                    <h2 class="display-5">$200+</h2>
                     <div class="price-option mt-3">
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo & Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -639,7 +639,7 @@
                 >
                   <div class="py-5 plan-post text-center">
                     <p class="header-top">Express</p>
-                    <h2 class="display-5">$125+</h2>
+                    <h2 class="display-5">$175+</h2>
                     <div class="price-option mt-3">
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick "></iconify-icon> Basic Wax Coating*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Wheel Surface and Tire Wash</p>
@@ -727,66 +727,10 @@
               tabindex="0"
             >
               <div class="row py-4">
-                <div class="col-lg-4 pb-4">
-                  <div class="py-5 plan-post text-center">
-                    <p class="header-top">Ceramic Coating<span data-bs-toggle="tooltip" data-bs-placement="top" title="Ceramic coatings are a protective layer applied to your vehicle's paint to protect and enhance the look of your vehicle and extend the life of your paint. Once we are done with our extensive decontamination wash process, we lock in using our ceramic coating to give your vehicle its best look possible. The ceramic coatings we use are designed to make your vehicle easy to wash and dry, and protect your paint's clear coat from contaminants such as tree sap, and brake dust. With regular maintenance, your vehicle should last anywhere between 5-7 years.">
-  ⓘ
-</span></p>
-                    <h2 class="display-5">$300+</h2>
-                    <div class="price-option mt-3">
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Ceramic + Advance Coating</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 2-Step Paint Correction</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Clay Treatment</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Wheel Surface, Barrel & Tire Wash</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> One free additional maintenance wash!</p>
-                    </div>
-
-                    <a
-                      href="booking.html"
-                      class="btn btn-primary mt-3 px-4 py-3 mx-2 book-now-btn-links"
-                      >Book now
-                      <iconify-icon
-                        icon="tabler:arrow-right"
-                        class="arrow-icon"
-                      ></iconify-icon>
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 pb-4">
-                  <div class="py-5 plan-post text-center">
-                    <p class="header-top">Paint Protection Film (PPF)</p>
-                    <h2 class="display-5">$160+</h2>
-                    <div class="price-option mt-3">
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> NEEDS COPYWRIGHT</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Clay Treatment</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Wheel Surface, Barrel & Tire Wash</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
-                    </div>
-
-                    <a
-                      href="booking.html"
-                      class="btn btn-primary mt-3 px-4 py-3 mx-2 book-now-btn-links"
-                      >Book now
-                      <iconify-icon
-                        icon="tabler:arrow-right"
-                        class="arrow-icon"
-                      ></iconify-icon>
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 pb-4">
+                                <div class="col-lg-4 pb-4">
                   <div class="py-5 plan-post text-center">
                     <p class="header-top">Supreme Nomads Special</p>
-                    <h2 class="display-5">$160+</h2>
+                    <h2 class="display-5">$475+</h2>
                     <div class="price-option mt-3">
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 1-Step Paint Enhancement</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 1 Year Ceramic Sealant*</p>
@@ -815,6 +759,64 @@
                     </a>
                   </div>
                 </div>
+
+                <div class="col-lg-4 pb-4">
+                  <div class="py-5 plan-post text-center">
+                    <p class="header-top">Ceramic Coating<span data-bs-toggle="tooltip" data-bs-placement="top" title="Ceramic coatings are a protective layer applied to your vehicle's paint to protect and enhance the look of your vehicle and extend the life of your paint. Once we are done with our extensive decontamination wash process, we lock in using our ceramic coating to give your vehicle its best look possible. The ceramic coatings we use are designed to make your vehicle easy to wash and dry, and protect your paint's clear coat from contaminants such as tree sap, and brake dust. With regular maintenance, your vehicle should last anywhere between 5-7 years.">
+  ⓘ
+</span></p>
+                    <h2 class="display-5">$950+</h2>
+                    <div class="price-option mt-3">
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Ceramic + Advance Coating</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 2-Step Paint Correction</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Clay Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Wheel Surface, Barrel & Tire Wash</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> One free additional maintenance wash!</p>
+                    </div>
+
+                    <a
+                      href="booking.html"
+                      class="btn btn-primary mt-3 px-4 py-3 mx-2 book-now-btn-links"
+                      >Book now
+                      <iconify-icon
+                        icon="tabler:arrow-right"
+                        class="arrow-icon"
+                      ></iconify-icon>
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 pb-4">
+                  <div class="py-5 plan-post text-center">
+                    <p class="header-top">Paint Protection Film (PPF)</p>
+                    <h2 class="display-5">$1000+</h2>
+                    <div class="price-option mt-3">
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> NEEDS COPYWRIGHT</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Clay Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Wheel Surface, Barrel & Tire Wash</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                    </div>
+
+                    <a
+                      href="booking.html"
+                      class="btn btn-primary mt-3 px-4 py-3 mx-2 book-now-btn-links"
+                      >Book now
+                      <iconify-icon
+                        icon="tabler:arrow-right"
+                        class="arrow-icon"
+                      ></iconify-icon>
+                    </a>
+                  </div>
+                </div>
+
+
               </div>
             </div>
             <div
@@ -1099,7 +1101,7 @@
     <!-- Maintenance Plans -->
     <section id="price" class="py-5 maintenance-packages">
         <div class="container py-5" data-aos="zoom-out">
-          <h5 class="display-5 mb-5">Maintanence Plans</h5>
+          <h5 class="display-5 mb-5">Maintenance Plans</h5>
           <p>Our maintenance plans are designed to keep your vehicle looking like the day you got it detailed for an extended period of time. Let us take care of your vehicle for a 6 or 12 month timeframe prepaid! Maintenance plans are only available with the paint protection packages* (star moves you to paint protection packages). Each wash must be scheduled within 40 days of the previous one or you lose the wash. If our calendar cannot accommodate the 40 day time frame, we will work with you to choose the next available slot.</p> 
               <div class="row py-4">
                 <div class="col-lg-6 pb-4">
