--- a/index.html
+++ b/index.html
@@ -217,7 +217,14 @@
     </nav>
 
     <!-- Hero -->
-    <section id="hero" style="background-image: url(images/banner1-img.jpg)">
+    <section id="hero">
+
+      <video class="hero-video" autoplay muted loop playsinline>
+            <source src="./videos/Website_Vid.mp4" type="video/mp4">
+        </video>
+        
+        <div class="hero-overlay"></div>
+        
   <div class="container padding-large">
     <div class="row">
       <div class="col-12 col-md-10 offset-md-1 text-center px-3 px-sm-5">
