--- a/project.html
+++ b/project.html
@@ -322,6 +322,20 @@
 
     </section>
 
+<!-- Video -->
+    <section class="video">
+        <div class="video-content position-relative open-up">
+            <div class="video-bg">
+                <img src="images/vid-img.jpg" alt="video" class="video-image img-fluid">
+            </div>
+            <div class="video-player position-absolute">
+                <a class='youtube' href="https://www.youtube.com/embed/RLHSvmh4rHw">
+                    <iconify-icon icon="ion:play-sharp" class="video-icon p-5"></iconify-icon>
+                </a>
+            </div>
+        </div>
+    </section>
+
 <!-- Reviews -->
     <section id="review">
       <div style="overflow: hidden">
