--- a/services.html
+++ b/services.html
@@ -674,7 +674,7 @@
         <div class="container py-5" data-aos="zoom-out">
           <h2 class="display-4 mb-5">Paint Protection</h2>
 
-          <ul class="nav nav-tabs my-3" id="myTab" role="tablist">
+          <ul class="nav nav-tabs my-3" id="paintProtectionTab" role="tablist">
             <li class="nav-item" role="presentation">
               <button
                 class="nav-link me-4 px-4 py-1 mb-2 active"
