changes to home

--- a/booking.html
+++ b/booking.html
@@ -79,10 +79,11 @@
           id="offcanvasNavbar"
           aria-labelledby="offcanvasNavbarLabel"
         >
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">
+          <div class="offcanvas-header my-2 mx-3">
+            <img src="./images/logo-gold-text.svg" alt="Supreme Nomads Detailing Logo" class="hamburger-logo"/> 
+            <!-- <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">
               Supreme Nomads
-            </h5>
+            </h5> -->
             <button
               type="button"
               class="btn-close btn-close-white text-reset"
