--- a/project.html
+++ b/project.html
@@ -73,10 +73,11 @@
           id="offcanvasNavbar"
           aria-labelledby="offcanvasNavbarLabel"
         >
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">
+          <div class="offcanvas-header my-2 mx-3">
+            <img src="./images/logo-gold-text.svg" alt="Supreme Nomads Detailing Logo" class="hamburger-logo"/> 
+            <!-- <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">
               Supreme Nomads
-            </h5>
+            </h5> -->
             <button
               type="button"
               class="btn-close btn-close-white text-reset"
@@ -221,8 +222,8 @@
 
     <section id="gallery">
 
-        <div class="container my-5 py-5">
-            <h2 class="display-4 text-center">Explore Our Work</h2>
+        <div class="container my-3 py-5">
+            <h2 class="display-4 text-center mb-5">Explore Our Work</h2>
                 <div class="isotope-container">
                     <div class="item polish col-md-4">
                         <a href="images/project1.jpg" title="Car Wash" class="image-link">
@@ -323,13 +324,13 @@
     </section>
 
 <!-- Video -->
-    <section class="video">
+    <section class="video mt-5 pt-5">
         <div class="video-content position-relative open-up">
             <div class="video-bg">
                 <img src="images/vid-img.jpg" alt="video" class="video-image img-fluid">
             </div>
             <div class="video-player position-absolute">
-                <a class='youtube' href="https://www.youtube.com/embed/RLHSvmh4rHw">
+                <a class='youtube' href="https://www.youtube.com/embed/7LFoHq9cgts?si=FSW75XHonioHXgn2">
                     <iconify-icon icon="ion:play-sharp" class="video-icon p-5"></iconify-icon>
                 </a>
             </div>
@@ -337,7 +338,7 @@
     </section>
 
 <!-- Reviews -->
-    <section id="review">
+    <!-- <section id="review">
       <div style="overflow: hidden">
         <div class="services-sub container my-5 py-5">
           <p class="header-top text-center mb-3">What Customers Say</p>
@@ -628,7 +629,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
 <!-- Footer -->
     <section id="footer">
