--- a/index.html
+++ b/index.html
@@ -967,6 +967,11 @@
     </div>
     <div class="col">
       <div class="footer-list mb-3">
+        <a href="#" class="nav-link text-uppercase p-0">Lake Norman</a>
+      </div>
+    </div>
+    <div class="col">
+      <div class="footer-list mb-3">
         <a href="#" class="nav-link text-uppercase p-0">Fort Mill, SC</a>
       </div>
     </div>
@@ -975,7 +980,7 @@
         <a href="#" class="nav-link text-uppercase p-0">Indian Land, SC</a>
       </div>
     </div>
-    <div class="col">
+        <div class="col">
       <div class="footer-list mb-3">
         <a href="#" class="nav-link text-uppercase p-0">Rock Hill, SC</a>
       </div>
