--- a/booking.html
+++ b/booking.html
@@ -215,7 +215,8 @@
       </div>
     </nav>
 
-    <section id="hero" style="background-image: url(images/banner3-img.jpg)">
+    <section id="hero" style="background-image: url(images/HERO\ BOOK\ NOW.jpg)">
+        <div class="overlay"></div>
       <div class="container py-5">
         <div class="row py-5">
           <div
