--- a/services.html
+++ b/services.html
@@ -763,7 +763,7 @@
 
                 <div class="col-lg-4 pb-4">
                   <div class="py-5 plan-post text-center">
-                    <p class="header-top">Ceramic Coating<span data-bs-toggle="tooltip" data-bs-placement="top" title="Ceramic coatings are a protective layer applied to your vehicle's paint to protect and enhance the look of your vehicle and extend the life of your paint. Once we are done with our extensive decontamination wash process, we lock in using our ceramic coating to give your vehicle its best look possible. The ceramic coatings we use are designed to make your vehicle easy to wash and dry, and protect your paint's clear coat from contaminants such as tree sap, and brake dust. With regular maintenance, your vehicle should last anywhere between 5-7 years.">
+                    <p class="header-top">Ceramic Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
   ⓘ
 </span></p>
                     <h2 class="display-5">$950+</h2>
@@ -1325,6 +1325,24 @@
         </footer>
       </div>
     </section>
+
+    <!-- MODAL -->
+     <div class="modal fade" id="ceramicModal" tabindex="-1" aria-labelledby="ceramicModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ceramicModalLabel">What is Ceramic Coating?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Ceramic coatings are a protective layer applied to your vehicle's paint to protect and enhance the look of your vehicle and extend the life of your paint. Once we are done with our extensive decontamination wash process, we lock in using our ceramic coating to give your vehicle its best look possible. The ceramic coatings we use are designed to make your vehicle easy to wash and dry, and protect your paint's clear coat from contaminants such as tree sap, and brake dust. With regular maintenance, your protective coating should last anywhere between 5-7 years.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
     <!-- script ================================================== -->
