add booking image

--- a/booking.html
+++ b/booking.html
@@ -215,7 +215,7 @@
       </div>
     </nav>
 
-    <section id="hero" style="background-image: url(images/HERO\ BOOK\ NOW.jpg)">
+    <section id="hero" style="background-image: url(https://supreme-nomads-website.s3.us-east-1.amazonaws.com/hero-book-now.png)">
         <div class="overlay"></div>
       <div class="container py-5">
         <div class="row py-5">
