--- a/project.html
+++ b/project.html
@@ -330,7 +330,7 @@
                 <img src="images/vid-img.jpg" alt="video" class="video-image img-fluid">
             </div>
             <div class="video-player position-absolute">
-                <a class='youtube' href="https://www.youtube.com/embed/7LFoHq9cgts?si=FSW75XHonioHXgn2">
+                <a class='youtube' href="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/home-hero-video.mp4">
                     <iconify-icon icon="ion:play-sharp" class="video-icon p-5"></iconify-icon>
                 </a>
             </div>
