--- a/services.html
+++ b/services.html
@@ -863,7 +863,7 @@
 
                 <div class="col-lg-4 pb-4">
                   <div class="py-5 plan-post text-center">
-                    <p class="header-top">Ceramic Coating<span data-bs-toggle="tooltip" data-bs-placement="top" title="Ceramic coatings are a protective layer applied to your vehicle's paint to protect and enhance the look of your vehicle and extend the life of your paint. Once we are done with our extensive decontamination wash process, we lock in using our ceramic coating to give your vehicle its best look possible. The ceramic coatings we use are designed to make your vehicle easy to wash and dry, and protect your paint's clear coat from contaminants such as tree sap, and brake dust. With regular maintenance, your vehicle should last anywhere between 5-7 years.">
+                    <p class="header-top">Ceramic Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
   ⓘ
 </span></p>
                     <h2 class="display-5">$1100+</h2>
@@ -962,7 +962,7 @@
 
                 <div class="col-lg-4 pb-4">
                   <div class="py-5 plan-post text-center">
-                    <p class="header-top">Ceramic Coating<span data-bs-toggle="tooltip" data-bs-placement="top" title="Ceramic coatings are a protective layer applied to your vehicle's paint to protect and enhance the look of your vehicle and extend the life of your paint. Once we are done with our extensive decontamination wash process, we lock in using our ceramic coating to give your vehicle its best look possible. The ceramic coatings we use are designed to make your vehicle easy to wash and dry, and protect your paint's clear coat from contaminants such as tree sap, and brake dust. With regular maintenance, your vehicle should last anywhere between 5-7 years.">
+                    <p class="header-top">Ceramic Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
   ⓘ
 </span></p>
                     <h2 class="display-5">$1300+</h2>
@@ -1001,7 +1001,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X <sup> &reg; </sup> Window Treatment</p>
                     </div>
 
                     <a
