Add our services pic

--- a/services.html
+++ b/services.html
@@ -210,7 +210,7 @@
     </nav>
 
 
-    <section id="hero" style="background-image:url(images/banner6-img.jpg);">
+    <section id="hero" style="background-image:url(images/HERO\ OUR\ SERVICES.png);">
         <div class="container py-5">
             <div class="row py-5">
                 <div
