Added acadmey hero

--- a/services-single.html
+++ b/services-single.html
@@ -209,7 +209,7 @@
       </div>
     </nav>
 
-    <section id="hero" style="background-image:url(images/banner2-img.jpg);">
+    <section id="hero" style="background-image:url(images/HERO\ ACADEMY.png);">
         <div class="container py-5">
             <div class="row py-5">
                 <div
