Add video again

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
   <div class="container padding-large">
      <video class="hero-video" autoplay muted loop playsinline>
-            <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/home-hero-video.mp4" type="video/mp4">
+            <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/hero-home.mp4">
         </video>
     <div class="row">
       <div class="col-12 col-md-10 offset-md-1 text-center px-3 px-sm-5">
