--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </nav>
 
     <!-- Hero -->
-    <section id="hero">
+    <section id="hero" class="homepage-video">
 
       <!-- <video class="hero-video" autoplay muted loop playsinline>
             <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/home-hero-video.mp4" type="video/mp4">
