Added changes to layout

--- a/booking.html
+++ b/booking.html
@@ -215,9 +215,8 @@
       </div>
     </nav>
 
-    <section id="hero" style="background-image: url(https://supreme-nomads-website.s3.us-east-1.amazonaws.com/hero-book-now.png)">
-        <div class="overlay"></div>
-      <div class="container py-5">
+    <section class="hero-section hero-booking">
+      <div class="container py-5 hero-content">
         <div class="row py-5">
           <div
             class="d-flex flex-wrap flex-column justify-content-center align-items-center my-5 py-5 text-white"
