--- a/index.html
+++ b/index.html
@@ -217,13 +217,11 @@
     </nav>
 
     <!-- Hero -->
-    <section id="hero" class="homepage-video">
+    <section id="hero" class="homepage">
 
-      <!-- <video class="hero-video" autoplay muted loop playsinline>
+      <video class="hero-video" autoplay muted loop playsinline>
             <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/home-hero-video.mp4" type="video/mp4">
-        </video> -->
-        
-        <!-- <div class="hero-overlay"></div> -->
+        </video>
 
   <div class="container padding-large">
      <video class="hero-video" autoplay muted loop playsinline>
