--- a/project.html
+++ b/project.html
@@ -209,7 +209,7 @@
       </div>
     </nav>
 
-    <section id="hero" style="background-image:url(https://supreme-nomads-website.s3.us-east-1.amazonaws.com/hero-gallery.png);">
+    <section class="hero-section hero-gallery">
         <div class="container py-5">
             <div class="row py-5">
                 <div
