--- a/services.html
+++ b/services.html
@@ -210,8 +210,10 @@
     </nav>
 
 
-    <section id="hero" style="background-image:url(images/HERO\ OUR\ SERVICES.png);">
-        <div class="container py-5">
+    <section class="hero-section hero-services">
+
+        <div class="hero-overlay"></div>
+        <div class="container py-5 hero-content">
             <div class="row py-5">
                 <div
                     class="d-flex flex-wrap flex-column justify-content-center align-items-center my-5 py-5 text-white">
