--- a/services-single.html
+++ b/services-single.html
@@ -209,8 +209,11 @@
       </div>
     </nav>
 
-    <section id="hero" style="background-image:url(images/HERO\ ACADEMY.png);">
-        <div class="container py-5">
+    <section class="hero-section hero-academy">
+
+      <div class="hero-overlay"></div> 
+
+        <div class="container py-5 hero-content">
             <div class="row py-5">
                 <div
                     class="d-flex flex-wrap flex-column justify-content-center align-items-center my-5 py-5 text-white">
