--- a/services.html
+++ b/services.html
@@ -292,7 +292,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup> &reg; </sup> Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo and Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -765,7 +765,7 @@
 
                 <div class="col-lg-4 pb-4">
                   <div class="py-5 plan-post text-center">
-                    <p class="header-top">Ceramic Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
+                    <p class="header-top">Ceramic  <br class="large-screen-break"> Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
   ⓘ
 </span></p>
                     <h2 class="display-5">$950+</h2>
@@ -865,7 +865,7 @@
 
                 <div class="col-lg-4 pb-4">
                   <div class="py-5 plan-post text-center">
-                    <p class="header-top">Ceramic Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
+                    <p class="header-top">Ceramic <br class="large-screen-break"> Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
   ⓘ
 </span></p>
                     <h2 class="display-5">$1100+</h2>
@@ -964,7 +964,7 @@
 
                 <div class="col-lg-4 pb-4">
                   <div class="py-5 plan-post text-center">
-                    <p class="header-top">Ceramic Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
+                    <p class="header-top">Ceramic  <br class="large-screen-break">Coating<span data-bs-toggle="modal" data-bs-target="#ceramicModal" style="cursor: pointer;">
   ⓘ
 </span></p>
                     <h2 class="display-5">$1300+</h2>
